project/mail/rust/contacts/contacts-common/src/snapshots/mail_contacts_common__contact_list__tests__contact_suggestions__test_contact_suggestions_1.snap
---
source: contacts/mail-contacts-common/src/contact_list.rs
expression: display_suggestions(res)
---
1 suggestions:

contact/0: Barbara Lox
B (#2E8378): barbara@lox.com <bXXXXXX@XXXXXXX>, last used: 1
